# melee-tools

./: .gitignore  CLAUDE.md  analysis_10q.py  annotate_10q.py  example_queries.md  pyproject.toml
analysis/: annotate_slides.py  common.py  fox_training.py  insights.py  ledgedash_analysis.py  positions.py  tech_chases.py  ten_questions.py
docs/: clip_query_guide.md  cookbook.md  example_queries.md  melee_guide.md
notebooks/: exploration.ipynb
replays/sample/: 10_16_39 Mario + Mr. Game & Watch (FoD).slp  12_25_15 Ice Climbers + Fox (FD).slp  12_42_33 Fox + Fox (YI).slp  13_44_55 Captain Falcon + [314] Fox (BF).slp  13_58_28 Falco + Falco (FD).slp  15_45_08 [=P] Marth + Fox (FD).slp  15_51_07 Falco + Peach (BF).slp  16_14_32 [K0NG] Donkey Kong + Samus (FoD).slp  16_18_01 Marth + [OASI] Captain Falcon (YS).slp  16_58_44 [OASI] Captain Falcon + Ganondorf (BF).slp  17_03_12 Captain Falcon + Jigglypuff (YI).slp  17_44_24 Sheik + Jigglypuff (FoD).slp  18_05_54 Marth + Fox (DL).slp  18_19_34 Captain Falcon + Fox (BF).slp  18_56_44 Fox + Captain Falcon (YS).slp  19_17_56 [SUR] Marth + [OASI] Captain Falcon (BF).slp  19_26_58 Marth + Fox (PS).slp  19_32_17 Fox + [3MLK] Captain Falcon (PS).slp  19_39_15 Captain Falcon + Marth (YS).slp  20200101 - HNC 5 - PM 0840 - MNTY Samus (Purple) vs Falco (Default) - Yoshi_s Story.slp  20200108 - HNC 16 - PM 0744 - Sheik (Blue) vs Fox (Blue) - Final Destination.slp  20_04_57 [LEAN] Fox + Fox (BF).slp  (+75 more)
tests/: conftest.py  test_combos.py  test_frames.py  test_iteration.py  test_parse.py  test_query.py  test_stats.py
(+22 files in other folders)
